fix bug #36017 (fopen() crashes PHP when opening a URL) + fix incosistency in macro usage